<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AssignmentDetailsActivity" tools:layout_editor_absoluteY="81dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp" app:layout_constraintBottom_toTopOf="@+id/etTitle">

        <Spinner
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="4"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddModule" android:text="@string/new_module"
                android:layout_weight="1"
                android:onClick="addModule"/>
    </LinearLayout>


    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etTitle"
            android:hint="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/etWeight"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etWeight"
            android:hint="@string/weight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etTitle"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/datePicker"
            android:importantForAutofill="no"/>

    <DatePicker android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:id="@+id/datePicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etWeight"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="addAssignment"/>


</androidx.constraintlayout.widget.ConstraintLayout>